--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
-
-    </header>
+<head>
+    
+</head>
 
     <body>
+        <header>
 
+        </header>
 
     </body>
 
