--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>From Homeland to Homeland</title>
+    <link rel="stylesheet" href="/vendor/normalize.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
     <body>
