Page CSS & HTML Class

--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="/vendor/normalize.css">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
-
     <body>
+        <div class="page">
         <header>
 
         </header>
-
+    </div>
     </body>
 
     <footer>
-
 
     </footer>
 
