Header Content HTML

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>From Homeland to Homeland</title>
-    <link rel="stylesheet" href="/vendor/normalize.css">
-    <link rel="stylesheet" href="/styles/style.css">
-</head>
-    <body>
-        <div class="page">
-        <header>
+    <link rel="stylesheet" href="/vendor/normalize.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img class="header__logo" src="images/logo.svg" alt="The USA Logo">
+        <a class="header__lang-link" href="#">En</a>
+        <a class="header__lang-link" href="#">Es</a>
 
-        </header>
+      </header>
     </div>
-    </body>
+  </body>
 
-    <footer>
-
-    </footer>
-
+  <footer></footer>
 </html>
