--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
-        <img class="header__logo" src="images/logo.svg" alt="The USA Logo">
-        <a class="header__lang-link" href="#">En</a>
-        <a class="header__lang-link" href="#">Es</a>
-      </header>
-    </div>
-  </body>
 
-  <footer></footer>
+        <header class="header">
+            <img class="logo" src="images/logo.svg" alt="The USA Logo">
+            <ul class="header header__lang-link">
+                <li><a class="header__lang-link" href="#">En</a></li>
+                <li><a class="header__lang-link" href="#">Es</a></li>
+            </ul>
+          </header>
+
+    </body>
+      <footer></footer>
+
+    </div>
+
 </html>
