--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <div class="page">
 
         <header class="header">
-            <img class="logo" src="images/logo.svg" alt="The USA Logo">
-            <ul class="header header__lang-link">
-                <li><a class="header__lang-link" href="#">En</a></li>
-                <li><a class="header__lang-link" href="#">Es</a></li>
-            </ul>
+            <img class="header__logo" src="/images/logo.svg" alt="Box Logo">
+            <p class="header__title">PRACTICUM ART GALLERY</p>
           </header>
 
     </body>
