--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <img class="header__logo" src="/images/logo.svg" alt="Box Logo">
             <p class="header__title">PRACTICUM ART GALLERY</p>
           </header>
+        
+        <section class="lead">
+          <h1 class="lead__title">From Homeland to Homeland</h1>
+          <p class="lead__subtitle">An epic journey from Kentucky to Burundi through Wales and Ukraine</p>
+          <img class="lead__image" src="images/__image.jpg" alt="B&W Photograph of Hillside Community">
+        </section>
 
     </body>
       <footer></footer>
