--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="header__title">PRACTICUM ART GALLERY</p>
       </header>
 
-        <section class="lead">
+        <div class="lead">
           <h1 class="lead__title">From Homeland to Homeland</h1>
           <p class="lead__subtitle">
             An epic journey from Kentucky to Burundi through Wales and Ukraine
@@ -24,8 +24,8 @@
             src="images/__image.jpg"
             alt="B&W Photograph of Hillside Community"
           />
-        </section>
-        <section class="intro">
+        </div>
+        <div class="intro">
           <h2 class="intro__title">
             Know the places your online pals come from a little better
           </h2>
@@ -46,7 +46,7 @@
             collection. No matter where you're from, we're glad that you're our
             neighbor.
           </p>
-        </section>
+        </div>
 
     </div>
   </body>
