photo-grid CSS & HTML

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             alt="B&W Photograph of Hillside Community"
           />
         </div>
+
         <div class="intro">
           <h2 class="intro__title">
             Know the places your online pals come from a little better
@@ -46,6 +47,17 @@
             collection. No matter where you're from, we're glad that you're our
             neighbor.
           </p>
+        </div>
+
+        <div class="photo-grid">
+          <img class="photo-grid__item" src="images/__item-7.jpg" alt="City by the Ocean">
+          <img class="photo-grid__item" src="images/__item-6.jpg" alt="Bright Blue Sky over City">
+          <img class="photo-grid__item" src="images/__item-5.jpg" alt="Sunset Behind Fort">
+          <img class="photo-grid__item" src="images/__item-4.jpg" alt="Wide shot Of City">
+          <img class="photo-grid__item" src="images/__item.jpg" alt="Open Field">
+          <img class="photo-grid__item" src="images/__item-1.jpg" alt="Green Vehicle Parking Only Sign">
+          <img class="photo-grid__item" src="images/__item-2.jpg" alt="Person Posing in Shelter Doorway">
+          <img class="photo-grid__item" src="images/__item-3.jpg" alt="Houses in Ground Behind Hill">
         </div>
 
     </div>
