Places for HTML & Framework for Places CSS

--- a/index.html
+++ b/index.html
@@ -14,51 +14,120 @@
         <p class="header__title">PRACTICUM ART GALLERY</p>
       </header>
 
-        <div class="lead">
-          <h1 class="lead__title">From Homeland to Homeland</h1>
-          <p class="lead__subtitle">
-            An epic journey from Kentucky to Burundi through Wales and Ukraine
-          </p>
+      <div class="lead">
+        <h1 class="lead__title">From Homeland to Homeland</h1>
+        <p class="lead__subtitle">
+          An epic journey from Kentucky to Burundi through Wales and Ukraine
+        </p>
+        <img
+          class="lead__image"
+          src="images/__image.jpg"
+          alt="B&W Photograph of Hillside Community"
+        />
+      </div>
+
+      <div class="intro">
+        <h2 class="intro__title">
+          Know the places your online pals come from a little better
+        </h2>
+        <p class="intro__text">
+          Every human being is an artist, a freedom being, called to participate
+          in transforming and reshaping the conditions, thinking, and structures
+          that shape and inform our lives.
+        </p>
+        <p class="intro__text">— Joseph Beuys</p>
+        <p class="intro__text">
+          The town of Practicum has brought together professionals from
+          different corners of the world. Today, Practicum Art Gallery is proud
+          to present stories and pictures from some of the people who dedicate
+          their time and effort to making the future tech professionals of this
+          town feel at home. Each of us has a unique story about the place we
+          come from. Feel free to add your own story and a piece of visual art
+          dedicated to your hometown to our collection. No matter where you're
+          from, we're glad that you're our neighbor.
+        </p>
+      </div>
+
+      <div class="photo-grid">
+        <img
+          class="photo-grid__item"
+          src="images/__item-7.jpg"
+          alt="City by the Ocean"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-6.jpg"
+          alt="Bright Blue Sky over City"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-5.jpg"
+          alt="Sunset Behind Fort"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-4.jpg"
+          alt="Wide shot Of City"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item.jpg"
+          alt="Open Field"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-1.jpg"
+          alt="Green Vehicle Parking Only Sign"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-2.jpg"
+          alt="Person Posing in Shelter Doorway"
+        />
+        <img
+          class="photo-grid__item"
+          src="images/__item-3.jpg"
+          alt="Houses in Ground Behind Hill"
+        />
+      </div>
+
+      <section class="places">
+        <div class="place">
+          <p class="place__title">Kyiv, Ukraine</p>
           <img
-            class="lead__image"
-            src="images/__image.jpg"
-            alt="B&W Photograph of Hillside Community"
+            class="place__image"
+            src="images/__imageplaces.jpg"
+            alt="Kyiv, Ukraine"
           />
-        </div>
-
-        <div class="intro">
-          <h2 class="intro__title">
-            Know the places your online pals come from a little better
-          </h2>
-          <p class="intro__text">
-            Every human being is an artist, a freedom being, called to
-            participate in transforming and reshaping the conditions, thinking,
-            and structures that shape and inform our lives.
+          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <div class="place__website">
+            <p class="place__url-heading">Artist</p>
+            <a class="place__link" href="#"
+              >Natalia Dolgushina, content producer</a
+            >
+          </div>
+          <p class="place__paragraph">
+            Kyiv (or Kiev), Ukraine's capital, is a large city located on the
+            shores of the Dnipro river. Of course, no one in their right mind
+            would swim in the river, unless they grew up here, in which case
+            they've probably tried it at some point. Summers are hot here, and
+            the winters are drafty, but the fall and the spring are are
+            absolutely amazing.
           </p>
-          <p class="intro__text">— Joseph Beuys</p>
-          <p class="intro__text">
-            The town of Practicum has brought together professionals from
-            different corners of the world. Today, Practicum Art Gallery is
-            proud to present stories and pictures from some of the people who
-            dedicate their time and effort to making the future tech
-            professionals of this town feel at home. Each of us has a unique
-            story about the place we come from. Feel free to add your own story
-            and a piece of visual art dedicated to your hometown to our
-            collection. No matter where you're from, we're glad that you're our
-            neighbor.
+          <p class="place__paragraph">
+            The city itself is a mix of pre-revolution, post-war and soviet
+            architecture, all of it sprinkled with modified balconies. If you're
+            on the right bank of the Dnipro, the landscape is difficult to
+            traverse for people on bikes and those wearing heels. The left bank
+            is considered far less interesting and prestigious though, even by
+            people who live on the far outskirts of the right one.
           </p>
         </div>
-
-        <div class="photo-grid">
-          <img class="photo-grid__item" src="images/__item-7.jpg" alt="City by the Ocean">
-          <img class="photo-grid__item" src="images/__item-6.jpg" alt="Bright Blue Sky over City">
-          <img class="photo-grid__item" src="images/__item-5.jpg" alt="Sunset Behind Fort">
-          <img class="photo-grid__item" src="images/__item-4.jpg" alt="Wide shot Of City">
-          <img class="photo-grid__item" src="images/__item.jpg" alt="Open Field">
-          <img class="photo-grid__item" src="images/__item-1.jpg" alt="Green Vehicle Parking Only Sign">
-          <img class="photo-grid__item" src="images/__item-2.jpg" alt="Person Posing in Shelter Doorway">
-          <img class="photo-grid__item" src="images/__item-3.jpg" alt="Houses in Ground Behind Hill">
-        </div>
+        <div class="place"></div>
+        <div class="place"></div>
+        <div class="place"></div>
+        <div class="place"></div>
+      </section>
 
     </div>
   </body>
