Places CSS font styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="header__title">PRACTICUM ART GALLERY</p>
       </header>
 
-      <div class="lead">
+      <div class="lead narrow-section">
         <h1 class="lead__title">From Homeland to Homeland</h1>
         <p class="lead__subtitle">
           An epic journey from Kentucky to Burundi through Wales and Ukraine
@@ -99,7 +99,6 @@
             src="images/__imageplaces.jpg"
             alt="Kyiv, Ukraine"
           />
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
           <div class="place__website">
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#"
@@ -122,6 +121,7 @@
             is considered far less interesting and prestigious though, even by
             people who live on the far outskirts of the right one.
           </p>
+          <a class="button place__button" href="#">Buy this artwork as NF</a>
         </div>
         <div class="place"></div>
         <div class="place"></div>
