Place CSS 01 block complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="header__title">PRACTICUM ART GALLERY</p>
       </header>
 
-      <div class="lead narrow-section">
+      <div class="lead">
         <h1 class="lead__title">From Homeland to Homeland</h1>
         <p class="lead__subtitle">
           An epic journey from Kentucky to Burundi through Wales and Ukraine
