My Home State Added

--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
             think you're in heaven. At 2,665 meters (8,743 ft) above sea level,
             Mount Teza is one of the coldest places in the province. But that
             cool breeze allows for one of the largest plantations of tea and
-            coffee in the country, which make up the bulk of Burundi's exports.<br>
-            <br>
+            coffee in the country, which make up the bulk of Burundi's
+            exports.<br />
+            <br />
             The Kibira National Park, one of the largest wildlife reserves for
             apes, overlaps four provinces, including Muramvya. This National
             Park lies at the apex of the beautiful mountains of the Congo-Nile
@@ -216,23 +217,37 @@
             filled with beautiful vegetation, and a source for the various
             rivers and streams which provide water around the country.
           </p>
-          
         </div>
 
         <div class="place">
-          <p class="place__title">Goshen, Indiana</p>
+          <p class="place__title">Indiana, USA</p>
           <img
             class="place__image"
-            src="images/__imageplaces.jpg"
-            alt="Kyiv, Ukraine"
+            src="https://c.pxhere.com/photos/2d/c4/main_street_usa_elkhart_indiana_in-734856.jpg!d"
+            alt="Goshen, Indiana"
           />
           <div class="place__website">
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#"
-              >Natalia Dolgushina, content producer</a
-            >
+              >Samantha Horsch, upcoming web developer
+            </a>
           </div>
-          <p class="place__paragraph">Placeholder text</p>
+          <p class="place__paragraph">
+            Indiana is located in the Midwest of the United States and those
+            residing there are known as the “Hoosiers.” There is a vast amount
+            of highways and farmland which earned Indiana’s nickname as the
+            “drive-through” state. <br />
+            <br />
+            Indiana is known for more than endless highways and cornrows. It is
+            home of NCAA division universities such as Notre Dame, Purdue, Ball
+            State and Butler. The state capital, Indianapolis, is home of the
+            Indy 500 car race event that’s held every Memorial Day Weekend.
+            Shipshewana is another tourist area where the Amish artisans sell
+            their wares and “Amish crack” (a.k.a. Rise ’n Roll donuts). Indiana
+            is also the birth-state of the King of Pop, Michael Jackson. <br />
+            <br />
+            Indiana is easily a diamond in the rough.
+          </p>
           <a class="button place__button" href="#">Buy this artwork as NF</a>
         </div>
       </section>
