My Home State Tweak

--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
           <p class="place__paragraph">
             Indiana is located in the Midwest of the United States and those
             residing there are known as the “Hoosiers.” There is a vast amount
-            of highways and farmland which earned Indiana’s nickname as the
+            of highways and farmland which has labeled Indiana as the
             “drive-through” state. <br />
             <br />
             Indiana is known for more than endless highways and cornrows. It is
             home of NCAA division universities such as Notre Dame, Purdue, Ball
-            State and Butler. The state capital, Indianapolis, is home of the
-            Indy 500 car race event that’s held every Memorial Day Weekend.
-            Shipshewana is another tourist area where the Amish artisans sell
-            their wares and “Amish crack” (a.k.a. Rise ’n Roll donuts). Indiana
-            is also the birth-state of the King of Pop, Michael Jackson. <br />
+            State and Butler. The state capital, Indianapolis, is where the Indy
+            500 is held during Memorial Day Weekend every year. Shipshewana is
+            another tourist area where the Amish artisans sell their wares and
+            “Amish crack” (a.k.a. Rise ’n Roll donuts). Indiana is also the
+            birth-state of the King of Pop, Michael Jackson. <br />
             <br />
             Indiana is easily a diamond in the rough.
           </p>
