Font-weight Tweak

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
 
         <div class="place">
-          <p class="place__title">Indiana, USA</p>
+          <p class="place__title">Indiana, <br>USA</p>
           <img
             class="place__image"
             src="https://c.pxhere.com/photos/2d/c4/main_street_usa_elkhart_indiana_in-734856.jpg!d"
