--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
 
         <div class="place">
-          <p class="place__title">Indiana, <br>USA</p>
+          <p class="place__title">Indiana, <br />USA</p>
           <img
             class="place__image"
             src="https://c.pxhere.com/photos/2d/c4/main_street_usa_elkhart_indiana_in-734856.jpg!d"
@@ -251,6 +251,16 @@
           <a class="button place__button" href="#">Buy this artwork as NF</a>
         </div>
       </section>
+
+      <div class="cover cover__background">
+        <div class="cover__group">
+          <h2 class="cover__title">Visit us</h2>
+          <p class="cover__subtitle">
+            Year-round<br />Practicum Art Gallery<br />404 Tim Berners-Lee Ave
+          </p>
+          <a class="button cover__button">Buy tickets</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
