Footer HTML & CSS

--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
           <a class="button cover__button">Buy tickets</a>
         </div>
       </div>
+
+      <div class="footer">
+        <p class="footer__copyright">&copy; 2021. Samantha Horsch</p>
+      </div>
+
     </div>
   </body>
 </html>
