--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             is considered far less interesting and prestigious though, even by
             people who live on the far outskirts of the right one.
           </p>
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
         </div>
 
         <div class="place">
@@ -152,7 +152,11 @@
             home to David Lloyd George, the only Welshman ever to hold the
             office of Prime Minister of the UK.
           </p>
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <a
+            class="button place__button"
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >Buy this artwork as NF</a
+          >
         </div>
 
         <div class="place">
@@ -181,7 +185,7 @@
             coeducational. Somewhat uniquely, <br />it charges no tuition —
             every student receives <br />a full-tuition scholarship.
           </p>
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
         </div>
 
         <div class="place">
@@ -195,7 +199,7 @@
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#">Grevisse Kenguruka, tech editor</a>
           </div>
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
           <p class="place__paragraph">
             Muramvya is one of the 18 provinces of Burundi. In the kingdom era,
             Muramvya was the royal capital and in 2007, because of its cultural
@@ -248,7 +252,7 @@
             <br />
             Indiana is easily a diamond in the rough.
           </p>
-          <a class="button place__button" href="#">Buy this artwork as NF</a>
+          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
         </div>
       </section>
 
