--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
               >Natalia Dolgushina, content producer</a
             >
           </div>
+          <div class="place__paragraphs">
           <p class="place__paragraph">
             Kyiv (or Kiev), Ukraine's capital, is a large city located on the
             shores of the Dnipro river. Of course, no one in their right mind
             would swim in the river, unless they grew up here, in which case
             they've probably tried it at some point. Summers are hot here, and
             the winters are drafty, but the fall and the spring are are
-            absolutely amazing.<br />
-            <br />
+            absolutely amazing.</p>
+          <p class="place__paragraph">
             The city itself is a mix of pre-revolution, post-war and soviet
             architecture, all of it sprinkled with modified balconies. If you're
             on the right bank of the Dnipro, the landscape is difficult to
@@ -120,9 +121,10 @@
             is considered far less interesting and prestigious though, even by
             people who live on the far outskirts of the right one.
           </p>
+        </div>
           <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
         </div>
-
+<!--
         <div class="place">
           <p class="place__title">Cricieth, Wales</p>
           <img
@@ -255,6 +257,7 @@
           <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
         </div>
       </section>
+      -->
 
       <div class="cover cover__background">
         <div class="cover__group">
