--- a/index.html
+++ b/index.html
@@ -106,25 +106,30 @@
             >
           </div>
           <div class="place__paragraphs">
-          <p class="place__paragraph">
-            Kyiv (or Kiev), Ukraine's capital, is a large city located on the
-            shores of the Dnipro river. Of course, no one in their right mind
-            would swim in the river, unless they grew up here, in which case
-            they've probably tried it at some point. Summers are hot here, and
-            the winters are drafty, but the fall and the spring are are
-            absolutely amazing.</p>
-          <p class="place__paragraph">
-            The city itself is a mix of pre-revolution, post-war and soviet
-            architecture, all of it sprinkled with modified balconies. If you're
-            on the right bank of the Dnipro, the landscape is difficult to
-            traverse for people on bikes and those wearing heels. The left bank
-            is considered far less interesting and prestigious though, even by
-            people who live on the far outskirts of the right one.
-          </p>
+            <p class="place__paragraph">
+              Kyiv (or Kiev), Ukraine's capital, is a large city located on the
+              shores of the Dnipro river. Of course, no one in their right mind
+              would swim in the river, unless they grew up here, in which case
+              they've probably tried it at some point. Summers are hot here, and
+              the winters are drafty, but the fall and the spring are are
+              absolutely amazing.
+            </p>
+            <p class="place__paragraph">
+              The city itself is a mix of pre-revolution, post-war and soviet
+              architecture, all of it sprinkled with modified balconies. If
+              you're on the right bank of the Dnipro, the landscape is difficult
+              to traverse for people on bikes and those wearing heels. The left
+              bank is considered far less interesting and prestigious though,
+              even by people who live on the far outskirts of the right one.
+            </p>
+          </div>
+          <a
+            class="button place__button"
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >Buy this artwork as NF</a
+          >
         </div>
-          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
-        </div>
-<!--
+
         <div class="place">
           <p class="place__title">Cricieth, Wales</p>
           <img
@@ -139,21 +144,24 @@
               manager</a
             >
           </div>
-          <p class="place__paragraph">
-            The medieval ruin of Cricieth Castle overlooks the town below from a
-            rock that juts out into the sea. It is thought to have been built by
-            Llewelyn the Great in the 13th century. Some 900 years later, the
-            self-styled Pearl of Wales on the Shores of Snowdonia has become a
-            popular tourist destination during the summer months.<br />
-            <br />
-            A short walk down the road from the castle, you can enjoy the
-            world's best ice cream at Cadwalader's, whose secret ingredient is
-            rumored to be locally sourced seaweed. Another claim to fame is the
-            fact that Cricieth won the Wales in Bloom award for five years in a
-            row for its spectacular floral displays around town. It was also
-            home to David Lloyd George, the only Welshman ever to hold the
-            office of Prime Minister of the UK.
-          </p>
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              The medieval ruin of Cricieth Castle overlooks the town below from
+              a rock that juts out into the sea. It is thought to have been
+              built by Llewelyn the Great in the 13th century. Some 900 years
+              later, the self-styled Pearl of Wales on the Shores of Snowdonia
+              has become a popular tourist destination during the summer months.
+            </p>
+            <p class="place__paragraph">
+              A short walk down the road from the castle, you can enjoy the
+              world's best ice cream at Cadwalader's, whose secret ingredient is
+              rumored to be locally sourced seaweed. Another claim to fame is
+              the fact that Cricieth won the Wales in Bloom award for five years
+              in a row for its spectacular floral displays around town. It was
+              also home to David Lloyd George, the only Welshman ever to hold
+              the office of Prime Minister of the UK.
+            </p>
+          </div>
           <a
             class="button place__button"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -172,22 +180,29 @@
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#">Travis Turner, author and editor</a>
           </div>
-          <p class="place__paragraph">
-            Berea is a small town located in the central part <br />of Kentucky.
-            The town is surrounded by beautiful forests and countryside. It's
-            known as the arts and crafts capital of the state, and visitors will
-            find plenty of shopping opportunities: shops with handmade jewelry,
-            candles, wood items, galleries, glass studios, and more. <br />The
-            town holds a yearly festival celebrating "spoonbread", a local dish
-            made with cornbread and served with a wooden spoon. <br />
-            <br />
-            However, it's probably known best for the local college. Berea
-            College was founded in 1855 and was the first college in the south
-            to be racially integrated, as well <br />as the first to be
-            coeducational. Somewhat uniquely, <br />it charges no tuition —
-            every student receives <br />a full-tuition scholarship.
-          </p>
-          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              Berea is a small town located in the central part of Kentucky. The
+              town is surrounded by beautiful forests and countryside. It's
+              known as the arts and crafts capital of the state, and visitors
+              will find plenty of shopping opportunities: shops with handmade
+              jewelry, candles, wood items, galleries, glass studios, and more.
+              The town holds a yearly festival celebrating "spoonbread", a local
+              dish made with cornbread and served with a wooden spoon.
+            </p>
+            <p class="place__paragraph">
+              However, it's probably known best for the local college. Berea
+              College was founded in 1855 and was the first college in the south
+              to be racially integrated, as well as the first to be
+              coeducational. Somewhat uniquely, it charges no tuition — every
+              student receives a full-tuition scholarship.
+            </p>
+          </div>
+          <a
+            class="button place__button"
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >Buy this artwork as NF</a
+          >
         </div>
 
         <div class="place">
@@ -201,28 +216,36 @@
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#">Grevisse Kenguruka, tech editor</a>
           </div>
-          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
-          <p class="place__paragraph">
-            Muramvya is one of the 18 provinces of Burundi. In the kingdom era,
-            Muramvya was the royal capital and in 2007, because of its cultural
-            and natural landscape, it was added to the UNESCO World Heritage
-            Tentative List. It is located in the center of Burundi, between the
-            country's political and economic capitals.<br />
-            <br />
-            The weather is rather chilly at night, but during the day, you would
-            think you're in heaven. At 2,665 meters (8,743 ft) above sea level,
-            Mount Teza is one of the coldest places in the province. But that
-            cool breeze allows for one of the largest plantations of tea and
-            coffee in the country, which make up the bulk of Burundi's
-            exports.<br />
-            <br />
-            The Kibira National Park, one of the largest wildlife reserves for
-            apes, overlaps four provinces, including Muramvya. This National
-            Park lies at the apex of the beautiful mountains of the Congo-Nile
-            Divide, ranging between 1550 and 2660 meters of altitude. It is
-            filled with beautiful vegetation, and a source for the various
-            rivers and streams which provide water around the country.
-          </p>
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              Muramvya is one of the 18 provinces of Burundi. In the kingdom
+              era, Muramvya was the royal capital and in 2007, because of its
+              cultural and natural landscape, it was added to the UNESCO World
+              Heritage Tentative List. It is located in the center of Burundi,
+              between the country's political and economic capitals.
+            </p>
+            <p class="place__pargraph">
+              The weather is rather chilly at night, but during the day, you
+              would think you're in heaven. At 2,665 meters (8,743 ft) above sea
+              level, Mount Teza is one of the coldest places in the province.
+              But that cool breeze allows for one of the largest plantations of
+              tea and coffee in the country, which make up the bulk of Burundi's
+              exports.
+            </p>
+            <p class="place__paragraph">
+              The Kibira National Park, one of the largest wildlife reserves for
+              apes, overlaps four provinces, including Muramvya. This National
+              Park lies at the apex of the beautiful mountains of the Congo-Nile
+              Divide, ranging between 1550 and 2660 meters of altitude. It is
+              filled with beautiful vegetation, and a source for the various
+              rivers and streams which provide water around the country.
+            </p>
+          </div>
+          <a
+            class="button place__button"
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >Buy this artwork as NF</a
+          >
         </div>
 
         <div class="place">
@@ -238,26 +261,34 @@
               >Samantha Horsch, upcoming web developer
             </a>
           </div>
-          <p class="place__paragraph">
-            Indiana is located in the Midwest of the United States and those
-            residing there are known as the “Hoosiers.” There is a vast amount
-            of highways and farmland which has labeled Indiana as the
-            “drive-through” state. <br />
-            <br />
-            Indiana is known for more than endless highways and cornrows. It is
-            home of NCAA division universities such as Notre Dame, Purdue, Ball
-            State and Butler. The state capital, Indianapolis, is where the Indy
-            500 is held during Memorial Day Weekend every year. Shipshewana is
-            another tourist area where the Amish artisans sell their wares and
-            “Amish crack” (a.k.a. Rise ’n Roll donuts). Indiana is also the
-            birth-state of the King of Pop, Michael Jackson. <br />
-            <br />
-            Indiana is easily a diamond in the rough.
-          </p>
-          <a class="button place__button" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NF</a>
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              Indiana is located in the Midwest of the United States and those
+              residing there are known as the “Hoosiers.” There is a vast amount
+              of highways and farmland which has labeled Indiana as the
+              “drive-through” state.
+            </p>
+            <p class="place__paragraph">
+              Indiana is known for more than endless highways and cornrows. It
+              is home of NCAA division universities such as Notre Dame, Purdue,
+              Ball State and Butler. The state capital, Indianapolis, is where
+              the Indy 500 is held during Memorial Day Weekend every year.
+              Shipshewana is another tourist area where the Amish artisans sell
+              their wares and “Amish crack” (a.k.a. Rise ’n Roll donuts).
+              Indiana is also the birth-state of the King of Pop, Michael
+              Jackson.
+            </p>
+            <p class="place__paragraph">
+              Indiana is easily a diamond in the rough.
+            </p>
+          </div>
+          <a
+            class="button place__button"
+            href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >Buy this artwork as NF</a
+          >
         </div>
       </section>
-      -->
 
       <div class="cover cover__background">
         <div class="cover__group">
