--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </div>
 
         <div class="place">
-          <p class="place__title">Indiana, <br />USA</p>
+          <p class="place__title">Indiana, USA</p>
           <img
             class="place__image"
             src="https://c.pxhere.com/photos/2d/c4/main_street_usa_elkhart_indiana_in-734856.jpg!d"
@@ -296,7 +296,7 @@
           <p class="cover__subtitle">
             Year-round<br />Practicum Art Gallery<br />404 Tim Berners-Lee Ave
           </p>
-          <a class="button cover__button">Buy tickets</a>
+          <a class="button cover__button" href="#">Buy tickets</a>
         </div>
       </div>
 
