--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>From Homeland to Homeland</title>
-    <link rel="stylesheet" href="/vendor/normalize.css" />
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img class="header__logo" src="/images/logo.svg" alt="Box Logo" />
+        <img class="header__logo" src="images/logo.svg" alt="Box Logo" />
         <p class="header__title">PRACTICUM ART GALLERY</p>
       </header>
 
@@ -293,9 +293,11 @@
       <div class="cover cover__background">
         <div class="cover__group">
           <h2 class="cover__title">Visit us</h2>
-          <p class="cover__subtitle">
-            Year-round<br />Practicum Art Gallery<br />404 Tim Berners-Lee Ave
-          </p>
+          <div class="cover__subtitle">
+            <p>Year-round</p>
+            <p>Practicum Art Gallery</p>
+            <p>404 Tim Berners-Lee Ave</p>
+          </div>
           <a class="button cover__button" href="#">Buy tickets</a>
         </div>
       </div>
