--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
         <div class="cover__group">
           <h2 class="cover__title">Visit us</h2>
           <div class="cover__subtitle">
-            <p>Year-round</p>
-            <p>Practicum Art Gallery</p>
-            <p>404 Tim Berners-Lee Ave</p>
-          </div>
+            <p class="cover__text">Year-round</p>
+            <p class="cover__text">Practicum Art Gallery</p>
+            <p class="cover__text">404 Tim Berners-Lee Ave</p>
+            </div>
           <a class="button cover__button" href="#">Buy tickets</a>
         </div>
       </div>
