--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       </div>
 
       <div class="footer">
-        <p class="footer__copyright">&copy; 2021. Samantha Horsch</p>
+        <p class="footer__copyright">&copy; 2021 Samantha Horsch</p>
       </div>
     </div>
   </body>
