Buy tickets link update

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <p class="cover__text">Practicum Art Gallery</p>
             <p class="cover__text">404 Tim Berners-Lee Ave</p>
             </div>
-          <a class="button cover__button" href="#">Buy tickets</a>
+          <a class="button cover__button" href="https://www.merriam-webster.com/dictionary/ticket">Buy tickets</a>
         </div>
       </div>
 
