--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img class="header__logo" src="images/logo.svg" alt="Box Logo" />
-        <p class="header__title">PRACTICUM ART GALLERY</p>
+        <p class="header__title">Practicum Art Gallery</p>
       </header>
 
       <div class="lead">
