--- a/index.html
+++ b/index.html
@@ -297,8 +297,12 @@
             <p class="cover__text">Year-round</p>
             <p class="cover__text">Practicum Art Gallery</p>
             <p class="cover__text">404 Tim Berners-Lee Ave</p>
-            </div>
-          <a class="button cover__button" href="https://www.merriam-webster.com/dictionary/ticket">Buy tickets</a>
+          </div>
+          <a
+            class="button cover__button"
+            href="https://www.merriam-webster.com/dictionary/ticket"
+            >Buy tickets</a
+          >
         </div>
       </div>
 
