--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
           <div class="place__website">
             <p class="place__url-heading">Artist</p>
             <a class="place__link" href="#"
-              >Steffan Warren, lead editor, <br />Kseniya Glagoleva, project
+              >Steffan Warren, lead editor,</a>
+              <a class="place__link" href="#">Kseniya Glagoleva, project
               manager</a
             >
           </div>
