--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
           <p class="place__title">Cricieth, Wales</p>
           <div class="place__website">
             <p class="place__url-heading">Artist</p>
+            <a class="place__link" href="#">Steffan Warren, lead editor,</a>
             <a class="place__link" href="#"
-              >Steffan Warren, lead editor,</a>
-              <a class="place__link" href="#">Kseniya Glagoleva, project
-              manager</a
+              >Kseniya Glagoleva, project manager</a
             >
           </div>
           <img
