Deleted cover__background element

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </div>
       </section>
 
-      <div class="cover cover__background">
+      <div class="cover">
         <div class="cover__group">
           <h2 class="cover__title">Visit us</h2>
           <div class="cover__subtitle">
