--- a/index.html
+++ b/index.html
@@ -293,9 +293,7 @@
           <div class="cover__group">
             <h2 class="cover__title">Visit us</h2>
             <p class="cover__subtitle">
-              Year-round
-              Practicum&nbsp;Art&nbsp;Gallery
-              404 Tim Berners-Lee Ave
+              Year-round Practicum&nbsp;Art&nbsp;Gallery 404 Tim Berners-Lee Ave
             </p>
             <a
               class="button cover__button"
